User Service endpoints and JWT Token system completed