@@ -1,59 +1,59 @@
 package com.example.user_service.security;
 
 import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 
-
+import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-@Component
+@Service
 public class JwtService {
     @Value("${jwt.secret}")
     private String SECRET;
 
-    public String generateToken(UserDetails userDetails){
-        Map<String,Object> claims = new HashMap<>();
-        claims.put("roles",userDetails.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList()));
+    public String generateToken(UserDetails user){
+        Map<String, Object> claims = new HashMap<>();
+        claims.put("roles",user.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority).toList());
         return Jwts.builder()
                 .claims(claims)
-                .subject(userDetails.getUsername())
+                .subject(user.getUsername())
                 .issuedAt(new Date())
-                .expiration(new Date(System.currentTimeMillis()+1000 * 60 * 30))
-                .signWith(Keys.hmacShaKeyFor(SECRET.getBytes()))
+                .expiration(new Date(System.currentTimeMillis() + 1000 * 60 * 30))
+                .signWith(Keys.hmacShaKeyFor(SECRET.getBytes()), Jwts.SIG.HS256)
                 .compact();
     }
 
+    public String extractUsername(String token){
+        return extractAllClaims(token).getSubject();
+    }
 
-    private Claims extractClaims(String token) throws JwtException {
+    private Claims extractAllClaims(String token) {
         return Jwts.parser()
-                .verifyWith(Keys.hmacShaKeyFor(SECRET.getBytes()))
+                .verifyWith(Keys.hmacShaKeyFor(SECRET.getBytes(StandardCharsets.UTF_8)))
                 .build()
                 .parseSignedClaims(token)
                 .getPayload();
     }
 
-    public String extractUsername(String token){
-        return extractClaims(token).getSubject();
-    }
-
-    public boolean isTokenValid(String token , UserDetails userDetails){
+    public boolean isTokenValid(String token,UserDetails userDetails){
         final String username = extractUsername(token);
         return (username.equals(userDetails.getUsername()) && !isTokenExpired(token));
 
     }
-    public boolean isTokenExpired(String token){
-        return extractClaims(token).getExpiration().before(new Date());
+
+    public boolean isTokenExpired(String token ){
+        return extractAllClaims(token).getExpiration().before(new Date());
     }
+
+
+
 
 }
